# DocMemory

./: .gitignore  README.md  drop_markdown_to_vector.bat  pyproject.toml
scripts/: probe_directml_fastembed.py  probe_npu_fastembed.py
src/docmemory/: cli.py  cli_npu.py
